# PoissonReconstruction

./: .gitignore  Allocator.h  BinaryNode.h  CMakeLists.txt  CmdLineParser.cpp  CmdLineParser.h  Doxyfile  Doxyfile.txt.in  Example.cxx  Factor.cpp  Factor.h  FunctionData.h  FunctionData.inl  Geometry.h  Geometry.inl  Hash.h  MarchingCubes.cpp  MarchingCubes.h  MemoryUsage.h  MemoryUsageApple.h  MemoryUsageUnix.h  MemoryUsageWin32.h  MultiGridOctest.cpp  MultiGridOctest.h  MultiGridOctreeData.cpp  MultiGridOctreeData.h  MultiGridOctreeData.inl  MultiGridOctreeData.inl.bak  Octree.h  Octree.inl  PPolynomial.h  PPolynomial.inl  PoissonReconstruction.kdevelop.pcs  Polynomial.h  Polynomial.inl  README  SparseMatrix.h  SparseMatrix.inl  Vector.h  Vector.inl  (+4 more)
data/: run.sh  sphere_points.vtp
documentation/: CMakeLists.txt  Doxyfile.txt.in
example/: CMakeLists.txt  Example.cxx
legacy/: CmdLineParser.cpp  CmdLineParser.h  ply.cpp  ply.h
paper/: InsightJournal.sty  shortbib.bib  vtkPoissionReconstruction.aux  vtkPoissionReconstruction.bbl  vtkPoissionReconstruction.blg  vtkPoissionReconstruction.brf  vtkPoissionReconstruction.out  vtkPoissionReconstruction.tex  vtkPoissionReconstruction.toc
plugin/: CMakeLists.txt
source/: Allocator.h  BinaryNode.h  CMakeLists.txt  Factor.h  FunctionData.h  Geometry.cpp  Geometry.h  Hash.h  MultiGridOctest.cpp  MultiGridOctreeData.cpp  MultiGridOctreeData.h  MultiGridOctreeData.inl  Octree.inl  PPolynomial.h  Polynomial.h  Polynomial.inl  SparseMatrix.h  SparseMatrix.inl  Vector.h  Vector.inl  vtkPoissonReconstruction.cxx  vtkPoissonReconstruction.h  vtkPoissonReconstructionConfigure.h.in
